# geemap

./: .editorconfig  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Untitled.ipynb  appveyor.yml  conf.py  environment.yml  index.html  index.md  karma.conf.cjs  karma.conf.js  make.bat  mkdocs.yml  modules.rst  objects.inv  package-lock.json  package.json  pyproject-codespell.precommit-toml  pyproject.toml  requirements.txt  requirements_all.txt  requirements_dev.txt  requirements_docs.txt  requirements_extra.txt  setup.cfg  setup.py  (+5 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  ee_token.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yaml  codeql.yml  dependency-review.yml  docker-delete-pr-tags.yml  docker-image.yml  docker-publish.yml  docs-build.yml  docs.yml  installation.yml  integration.yml  macos.yml  ok-to-test.yml  py-check.yaml  py311.yml  py313.yml  pypi-publish.yml  pypi.yml  release-bump-master-version.yml  release-prerelease.yml  release-stable.yml  ubuntu.yml  unit.yml  windows.yml
ai/: ai.md  index.html
assets/: README.md  index.html
basemaps/: index.html
cartoee/: index.html
changelog/: changelog.md  index.html
changelog_update/: index.html
chart/: index.html
cheatsheet/: cheatsheet.md  index.html
citations/: index.html
colormaps/: colormaps.md  index.html
common/: index.html
contributing/: contributing.md  index.html
conversion/: index.html
core/: index.html
coreutils/: index.html
data/: charts_feature_example.dbf  countries.dbf  countries.geojson  countries.shx  life_exp.csv  us_cities.dbf  us_states.kml  wind_global.nc  world_cities.csv
datasets/: datasets.md  index.html
deck/: index.html
docker/: Dockerfile
docs/: CNAME  Makefile  ads.txt  authors.rst  basemaps.md  cartoee.md  changelog.md  changelog_update.py  chart.md  cheatsheet.md  citations.md  colormaps.md  common.md  conf.py  contributing.md  conversion.md  core-core.md  core.md  coreutils.md  deck.md  eefolium.md  examples.md  faq.md  foliumap.md  geemap.md  geemap.rst  get-started.md  heremap.md  history.rst  index.md  index.rst  installation.md  installation.rst  kepler.md  make.bat  map_widgets.md  maplibregl.md  osm.md  plot.md  plotlymap.md  (+14 more)
docs/assets/: README.md
docs/notebooks/: 00_ee_auth_colab.ipynb  00_geemap_colab.ipynb  00_geemap_key_features.ipynb  01_geemap_intro.ipynb  02_using_basemaps.ipynb  03_inspector_tool.ipynb  04_split_panel_map.ipynb  05_drawing_tools.ipynb  06_marker_cluster.ipynb  07_geojson.ipynb  08_ee_js_to_ipynb.ipynb  09_plotting.ipynb  100_numpy_to_cog.ipynb  101_lidar.ipynb  102_blend_hillshade.ipynb  103_split_control.ipynb  104_clip_image.ipynb  105_netcdf.ipynb  106_kepler_gl.ipynb  107_pydeck.ipynb  108_image_zonal_stats.ipynb  109_coordinate_grids.ipynb  10_shapefiles.ipynb  111_image_count.ipynb  112_cartoee_basemap.ipynb  112_cartoee_basemap_X.ipynb  113_image_area.ipynb  114_dynamic_world.ipynb  115_land_cover.ipynb  116_land_cover_timeseries.ipynb  117_fishnet.ipynb  118_download_image.ipynb  11_export_image.ipynb  120_javascript.ipynb  121_vector_style.ipynb  122_lidar.ipynb  123_sentinel1_timelapse.ipynb  124_more_datasets.ipynb  125_example_code.ipynb  126_inspector.ipynb  (+153 more)
ee_tile_layers/: ee_tile_layers.md  index.html
examples/: README.md  batch_update.py  earthengine_js_to_ipynb.ipynb  geemap_and_earthengine.ipynb  geemap_and_folium.ipynb  geemap_and_ipyleaflet.ipynb  geemap_and_ipywidgets.ipynb  index.html  javascript_to_python.py  template.ipynb  usda_naip_imagery.ipynb
faq/: index.html
foliumap/: index.html
geemap/: __init__.py  ai.py  basemaps.py  cartoee.py  chart.py  cli.py  colormaps.py  common.py  conversion.py  core.py  coreutils.py  datasets.py  deck.py  dl.py  draw_control.py  ee_folium_tile_layer.py  ee_leaflet_tile_layer.py  ee_tile_layer_utils.py  ee_tile_layers.py  eefolium.py  folium.py  foliumap.py  geemap.py  heremap.py  index.html  kepler.py  legends.py  map_widgets.py  maplibregl.py  ml.py  onetest.md  osm.py  palette.py  plot.py  plotlymap.py  report.py  tesst.txt  timelapse.py  toolbar.py  utils.py
get-started/: get-started.md  index.html
heremap/: index.html
installation/: index.html  installation.md
js/: basemap_selector.ts  color_picker.ts  common.css  container.ts  inspector.ts  ipywidgets_styles.ts  layer_editor.ts  layer_manager.ts  layer_manager_row.ts  legend.ts  legend_customization.ts  lit_widget.ts  material_styles.ts  palette_editor.ts  raster_layer_editor.ts  search_bar.ts  styles.ts  tab_panel.ts  toolbar.ts  toolbar_item.ts  tree_node.ts  utils.ts  vector_layer_editor.ts
kepler/: index.html
legends/: index.html  legends.md
map_widgets/: index.html
maplibregl/: index.html
ml/: index.html  ml.md
notebooks/: ee_to_xarray_xee_migration_test.ipynb
osm/: index.html
paper/: paper.bib  paper.md
plot/: index.html
plotlymap/: index.html
releasing/: index.html  releasing.md
report/: index.html
scripts/: bump_geemap_version.py
search_bk/: index.html
tests/: __init__.py  basemap_selector.spec.ts  conftest.py  fake_anywidget.ts  fake_ee.py  fake_map.py  layer_manager.spec.ts  layer_manager_row.spec.ts  legend.spec.ts  search_bar.spec.ts  test_ai.py  test_basemaps.py  test_cartoee.py  test_chart.py  test_cli.py  test_colormaps.py  test_common.py  test_conversion.py  test_core.py  test_coreutils.py  test_datasets.py  test_deck.py  test_draw_control.py  test_ee_folium_tile_layer.py  test_ee_leaflet_tile_layer.py  test_ee_tile_layer_utils.py  test_ee_tile_layers.py  test_foliumap.py  test_geemap.py  test_infrastructure.py  test_kepler.py  test_legends.py  test_map_widgets.py  test_maplibregl.py  test_ml.py  test_osm.py  test_plot.py  test_plotlymap.py  test_report.py  test_timelapse.py  (+2 more)
timelapse/: index.html
toolbar/: index.html
tutorials/: LICENSE  README.md  index.html  tutorials.md
usage/: index.html
(+692 files in other folders)
